<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".Address">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/name"
        android:textSize="8sp" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/mobile"
        android:textSize="8dp" />

    <LinearLayout
        android:id="@+id/center1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/pin"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_border"
            android:hint="@string/pin"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/landmark"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_border"
            android:hint="@string/landmark"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:paddingStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_border"
            android:hint="@string/city"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_border"
            android:hint="@string/name"
            android:textSize="10dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/house"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/house"
        android:textSize="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Continue" />

        <TextView
            android:id="@+id/txt_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/green"
            android:clickable="true"
            android:textSize="12sp" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address Type"
            android:textColor="@color/offwhite"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="home"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/work"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/add"/>
        </LinearLayout>
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>

