<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    app:cnb_unselectedColor="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/homeicon"
        android:title="@string/title_home"
        app:cnb_iconColor="@color/green"
        app:cnb_textColor="@color/green"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ordersicon"
        android:title="@string/my_orders"
        app:cnb_iconColor="@color/green"
        app:cnb_textColor="@color/green" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/profileicon"
        android:title="@string/profile"
        app:cnb_iconColor="@color/green"
        app:cnb_textColor="@color/green" />
</menu>