<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/green"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:layout_marginTop="70dp">

<com.google.android.material.card.MaterialCardView
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:elevation="8dp"
    app:cardCornerRadius="2dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <RelativeLayout
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:textColor="@color/black"
        android:textSize="10dp"/>
    <TextView
        android:layout_below="@id/welcome_text"
        android:id="@+id/nualgi_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nualgi_family"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"/>
        <EditText
            android:id="@+id/register"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:inputType="number"
            android:background="@drawable/edittext_border"
            android:layout_below="@id/nualgi_text"/>
        <Button
            android:layout_margin="10dp"
            android:id="@+id/login_button"
            android:layout_below="@id/register"
            android:text="@string/Continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_below="@id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept_login"
            android:textSize="6dp"/>

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

