<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">
    <TextView
        android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="My Account"
        android:textColor="@color/black"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="15dp"/>
    <RelativeLayout
        android:id="@+id/bottomsheet1"
        android:layout_below="@id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/profileicon"
        android:padding="5dp"/>
    <TextView
        android:id="@+id/myprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myprofile"
        android:textSize="12dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_toEndOf="@+id/profileImage"
        android:layout_toLeftOf="@id/profileImage"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/bottomsheet2"
        android:layout_below="@id/bottomsheet1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/language"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/languageicon"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/languagetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="12dp"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_toEndOf="@+id/language"
            android:layout_toLeftOf="@id/language"/>
    </RelativeLayout>
    <RelativeLayout
    android:id="@+id/bottomsheet3"
    android:layout_below="@id/bottomsheet2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/address"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/addressicon"
        android:padding="5dp"/>
    <TextView
        android:id="@+id/addresstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="12dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_toEndOf="@+id/address"
        android:layout_toLeftOf="@id/address"/>
</RelativeLayout>
    <RelativeLayout
    android:id="@+id/bottomsheet4"
    android:layout_below="@id/bottomsheet3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/rating"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ratingsreviews"
        android:padding="5dp"/>
    <TextView
        android:id="@+id/ratingtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textSize="12dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_toEndOf="@+id/rating"
        android:layout_toLeftOf="@id/rating"/>
</RelativeLayout>
    <TextView
        android:id="@+id/companyinfo"
        android:layout_below="@+id/bottomsheet4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Company Info"
        android:textColor="@color/black"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="15dp"/>
    <RelativeLayout
    android:id="@+id/bottomsheet5"
    android:layout_below="@id/companyinfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/contactus"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/contactusicon"
        android:padding="5dp"/>
    <TextView
        android:id="@+id/contactustext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactus"
        android:textSize="12dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_toEndOf="@+id/contactus"
        android:layout_toLeftOf="@id/contactus"/>
</RelativeLayout>
    <RelativeLayout
    android:id="@+id/bottomsheet6"
    android:layout_below="@id/bottomsheet5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/privacy"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/privacypolicy"
        android:padding="5dp"/>
    <TextView
        android:id="@+id/privacytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        android:textSize="12dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_toEndOf="@+id/privacy"
        android:layout_toLeftOf="@id/privacy"/>
</RelativeLayout>
</RelativeLayout>

