<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp">
    <RelativeLayout
        android:id="@+id/contact1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/corpaddresstext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/corpAddress"
            android:textSize="12dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/contact2"
        android:layout_below="@+id/contact1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/nano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nano"
            android:textSize="10dp"
            android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/contact3"
            android:layout_below="@+id/contact2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="#651, 11th main road V block, Jayanagar Bangalore - 560041"
            android:textSize="8sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/offwhite"
        android:id="@+id/contact4"
        android:layout_below="@+id/contact3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/contactus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactus"
            android:textSize="12dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/contact5"
        android:layout_below="@+id/contact4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="+91 80265 91524"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/contact6"
        android:layout_below="@+id/contact5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="+91 94496 11878"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/offwhite"
        android:id="@+id/contact7"
        android:layout_below="@+id/contact6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textSize="12dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/contact8"
        android:layout_below="@+id/contact7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="sampath@nualgi.com"
            android:textSize="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/contact9"
        android:layout_below="@+id/contact8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="madhu@nualgi.com"
            android:textSize="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/offwhite"
        android:id="@+id/contact10"
        android:layout_below="@+id/contact9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textSize="12dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/contact11"
        android:layout_below="@+id/contact10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="www.nualgi.com"
            android:textSize="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</RelativeLayout>